@@ -1464,7 +1464,7 @@ int hashcat_session_execute (hashcat_ctx_t *hashcat_ctx)
 
     if (modes_cnt > 1)
     {
-      if (user_options->quiet == false)
+      if (user_options->machine_readable == false)
       {
         event_log_info (hashcat_ctx, "The following %d hash-modes match the structure of your input hash:", modes_cnt);
         event_log_info (hashcat_ctx, NULL);
@@ -1474,7 +1474,7 @@ int hashcat_session_execute (hashcat_ctx_t *hashcat_ctx)
 
       for (int i = 0; i < modes_cnt; i++)
       {
-        if (user_options->quiet == false)
+        if (user_options->machine_readable == false)
         {
           event_log_info (hashcat_ctx, "%7u | %-51s | %s", usage_sort_buf[i].hash_mode, usage_sort_buf[i].hash_name, strhashcategory (usage_sort_buf[i].hash_category));
         }
@@ -1488,7 +1488,7 @@ int hashcat_session_execute (hashcat_ctx_t *hashcat_ctx)
 
       hcfree (usage_sort_buf);
 
-      if (user_options->quiet == false) event_log_info (hashcat_ctx, NULL);
+      if (user_options->machine_readable == false) event_log_info (hashcat_ctx, NULL);
 
       if (user_options->identify == false)
       {
@@ -1510,7 +1510,7 @@ int hashcat_session_execute (hashcat_ctx_t *hashcat_ctx)
 
     if (user_options->identify == true)
     {
-      if (user_options->quiet == true)
+      if (user_options->machine_readable == true)
       {
         event_log_info (hashcat_ctx, "%u", usage_sort_buf[0].hash_mode);
       }
