@@ -966,15 +966,16 @@ int hwmon_ctx_init (hashcat_ctx_t *hashcat_ctx)
   return 0;
   #endif // WITH_HWMON
 
-  if (user_options->hash_info       == true) return 0;
-  if (user_options->keyspace        == true) return 0;
-  if (user_options->left            == true) return 0;
-  if (user_options->backend_info    == true) return 0;
-  if (user_options->show            == true) return 0;
-  if (user_options->stdout_flag     == true) return 0;
-  if (user_options->usage           == true) return 0;
-  if (user_options->version         == true) return 0;
-  if (user_options->hwmon_disable   == true) return 0;
+  if (user_options->hash_info     == true) return 0;
+  if (user_options->keyspace      == true) return 0;
+  if (user_options->left          == true) return 0;
+  if (user_options->backend_info  == true) return 0;
+  if (user_options->show          == true) return 0;
+  if (user_options->stdout_flag   == true) return 0;
+  if (user_options->usage         == true) return 0;
+  if (user_options->version       == true) return 0;
+  if (user_options->identify      == true) return 0;
+  if (user_options->hwmon_disable == true) return 0;
 
   hwmon_ctx->hm_device = (hm_attrs_t *) hccalloc (DEVICES_MAX, sizeof (hm_attrs_t));
 
