@@ -119,6 +119,7 @@ int potfile_init (hashcat_ctx_t *hashcat_ctx)
   if (user_options->progress_only   == true) return 0;
   if (user_options->usage           == true) return 0;
   if (user_options->version         == true) return 0;
+  if (user_options->identify        == true) return 0;
   if (user_options->potfile_disable == true) return 0;
 
   if (hashconfig->potfile_disable == true) return 0;
